--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
     <div class="container">
+        <div class="media-aspect-wrapper">
+        <img src="imagenes-videos/kr.jpg" alt="Enunciado y Diagrama de Estados para un montacargas">
+   </div>
         <h1>Presentación de Infografía</h1>
         <p><strong>Integrantes:</strong></p>
         <h2>•Reynaldo Francisco Lozano Munguía</h2>
@@ -20,3 +23,4 @@
 
 </body>
 </html>
+
