--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="media-aspect-wrapper">
-        <img src="imagenes-videos/kr.jpg" alt="Enunciado y Diagrama de Estados para un montacargas">
+        <img src="imagenes-videos/qr2.jpg" alt="Enunciado y Diagrama de Estados para un montacargas">
    </div>
         <h1>Presentación de Infografía</h1>
         <p><strong>Integrantes:</strong></p>
@@ -23,4 +23,5 @@
 
 </body>
 </html>
+
 
